# logitune

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  com.logitune.Logitune.yml  flake.nix
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  release.yml  wiki-sync.yml
data/: 71-logitune.rules  com.logitune.Logitune.desktop  com.logitune.Logitune.metainfo.xml  logitune-autostart.desktop  logitune.desktop
devices/: manifest.json  schema.json
devices/m650/: descriptor.json
devices/mx-anywhere-3/: descriptor.json
devices/mx-anywhere-3-for-business/: descriptor.json
devices/mx-anywhere-3s-for-business/: descriptor.json
docs/: architecture.html  data-flow.html
hooks/: pre-push
packaging/: PKGBUILD  logitune.install
scripts/: extract-depot.py  generate-device-manifest.py  generate-from-optionsplus.py  generate-placeholders.py  generate-readme-devices.py  generate_package_deps.py  package-arch.sh  package-deb.sh  package-rpm.sh  pre-push  release.sh
src/app/: AppController.cpp  AppController.h  AppRoot.cpp  AppRoot.h  CMakeLists.txt  TrayManager.cpp  TrayManager.h  WindowTracker.cpp  WindowTracker.h  main.cpp
src/app/models/: ActionFilterModel.cpp  ActionFilterModel.h  ActionModel.cpp  ActionModel.h  ButtonModel.cpp  ButtonModel.h  DeviceModel.cpp  DeviceModel.h  EditCommand.h  EditorModel.cpp  EditorModel.h  ProfileModel.cpp  ProfileModel.h
src/app/qml/: DeviceView.qml  HomeView.qml  Main.qml  Theme.qml
src/app/qml/components/: ActionsPanel.qml  AppProfileBar.qml  BatteryChip.qml  ButtonCallout.qml  ConflictBanner.qml  DetailPanel.qml  DeviceCard.qml  DeviceRender.qml  DiffModal.qml  EditableText.qml  EditorToolbar.qml  HotspotControl.qml  InfoCallout.qml  KeystrokeCapture.qml  LogituneSlider.qml  LogituneToggle.qml  SideNav.qml  Toast.qml
src/app/qml/pages/: ButtonsPage.qml  EasySwitchPage.qml  PointScrollPage.qml  SettingsPage.qml
src/app/services/: ActiveDeviceResolver.cpp  ActiveDeviceResolver.h  ButtonActionDispatcher.cpp  ButtonActionDispatcher.h  DeviceCommandHandler.cpp  DeviceCommandHandler.h  DeviceCommands.cpp  DeviceCommands.h  DeviceSelection.cpp  DeviceSelection.h  ProfileOrchestrator.cpp  ProfileOrchestrator.h
src/core/: ActionExecutor.cpp  ActionExecutor.h  ButtonAction.h  CMakeLists.txt  DeviceFetcher.cpp  DeviceFetcher.h  DeviceManager.cpp  DeviceManager.h  DeviceRegistry.cpp  DeviceRegistry.h  DeviceSession.cpp  DeviceSession.h  DistroDetector.cpp  DistroDetector.h  PhysicalDevice.cpp  PhysicalDevice.h  Placeholder.cpp  ProfileEngine.cpp  ProfileEngine.h
src/core/actions/: ActionPreset.cpp  ActionPreset.h  ActionPresetRegistry.cpp  ActionPresetRegistry.h  actions.json
src/core/desktop/: GenericDesktop.cpp  GenericDesktop.h  GnomeDesktop.cpp  GnomeDesktop.h  HyprlandDesktop.cpp  HyprlandDesktop.h  KDeDesktop.cpp  KDeDesktop.h  LinuxDesktopBase.cpp  LinuxDesktopBase.h
src/core/devices/: DescriptorWriter.cpp  DescriptorWriter.h  JsonDevice.cpp  JsonDevice.h  MxMaster2sDescriptor.cpp  MxMaster2sDescriptor.h  MxMaster4Descriptor.cpp  ProXWirelessDescriptor.cpp  ProXWirelessDescriptor.h
src/core/hidpp/: CommandProcessor.cpp  CommandProcessor.h  CommandQueue.h  FeatureDispatcher.cpp  FeatureDispatcher.h  HidppTypes.cpp  HidppTypes.h  HidrawDevice.cpp  HidrawDevice.h  Transport.cpp  Transport.h
src/core/hidpp/capabilities/: BatteryCapability.cpp  BatteryCapability.h  GestureV2Capability.cpp  GestureV2Capability.h  ReprogControlsCapability.cpp  ReprogControlsCapability.h
src/core/hidpp/features/: AdjustableDPI.cpp  AdjustableDPI.h  Battery.cpp  Battery.h  DeviceName.cpp  DeviceName.h  GestureV2.cpp  GestureV2.h  HiResWheel.cpp  HiResWheel.h  SmartShift.cpp  SmartShift.h  ThumbWheel.cpp  ThumbWheel.h
src/core/input/: UinputInjector.cpp
src/core/interfaces/: IDesktopIntegration.h  IDevice.h
src/core/logging/: CrashHandler.cpp
tests/: CMakeLists.txt  test_action_executor.cpp  test_action_filter_model.cpp  test_action_model.cpp  test_app_controller.cpp  test_app_root.cpp  test_autostart_desktop.cpp  test_button_action.cpp  test_button_model.cpp  test_capability_dispatch.cpp  test_descriptor_writer.cpp  test_desktop_factory.cpp  test_device_discovery.cpp  test_device_fetcher.cpp  test_device_model.cpp  test_device_reconnect.cpp  test_device_registry.cpp  test_device_session.cpp  test_distro_detector.cpp  test_dpi_cycle_ring.cpp  test_editor_model.cpp  test_feature_dispatcher.cpp  test_features.cpp  test_json_device.cpp  test_keystroke_parser.cpp  test_notification_filtering.cpp  test_physical_device.cpp  test_profile_apply_behavior.cpp  test_profile_engine.cpp  test_profile_model.cpp  test_profile_persistence.cpp  test_profile_switch_behavior.cpp  test_profile_switching.cpp  test_scroll_features.cpp  test_settings_change_behavior.cpp  test_smoke.cpp  test_thumb_wheel_behavior.cpp  test_transport.cpp  test_tray_manager.cpp  test_wmclass_resolution.cpp
tests/core/actions/: test_action_preset.cpp  test_action_preset_registry.cpp
tests/core/desktop/: test_generic_desktop_resolve.cpp  test_gnome_desktop_resolve.cpp  test_hyprland_desktop_resolve.cpp  test_kde_desktop_resolve.cpp
tests/helpers/: AppControllerFixture.h  AppRootFixture.h  TestFixtures.h
tests/mocks/: MockDesktop.h  MockDevice.h
tests/qml/: tst_EasySwitchPageEdit.qml  tst_EditorToolbar.qml  tst_SideNav.qml
tests/scripts/: test_extractor.py  test_package_deps.py
tests/scripts/fixtures/optionsplus/devices/mx_master_2s/: core_metadata.json  manifest.json
tests/scripts/fixtures/optionsplus/devices/mx_master_3s/: core_metadata.json  manifest.json
tests/scripts/fixtures/optionsplus/main/logioptionsplus/data/devices/: devices_test.json
tests/services/: ActiveDeviceResolverFixture.h  ButtonActionDispatcherFixture.h  DeviceCommandHandlerFixture.h  DeviceCommandsFixture.h  DeviceSelectionFixture.h  ProfileOrchestratorFixture.h  test_active_device_resolver.cpp  test_button_action_dispatcher.cpp  test_device_command_handler.cpp  test_device_commands.cpp  test_device_selection.cpp  test_profile_orchestrator.cpp
(+89 files in other folders)
